--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -56,7 +56,7 @@
             <span>Добавьте фото</span>
           </div>
           <div class="edit-wrapper">
-            <button class="edit-btn" id="submit">Edit</button>
+            <button class="edit-btn">Edit</button>
           </div>
         </div>
         <div class="profile-details">
@@ -156,9 +156,7 @@
             </button>
           </div>
           <div class="ready-wrap">
-            <a href="/dashboard">
-              <button class="btn">Готово</button>
-            </a>
+            <button class="btn" id="submit">Готово</button>
           </div>
         </div>
       </div>
