feat: redirect upon logo click

--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -43,10 +43,12 @@
       <div class="top-logo-part">
         <div class="container">
           <div class="main-logo">
-            <img
-              src="../static/assets/images/white-logo.svg"
-              alt="white-logo"
-            />
+            <a href="/">
+              <img
+                src="../static/assets/images/white-logo.svg"
+                alt="white-logo"
+              />
+            </a>
           </div>
         </div>
       </div>
