feat: redirect to login

--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -106,7 +106,7 @@
             </div>
             <div class="account-check-wrap">
               <!-- <a href="">Забыл пароль?</a> -->
-              <a href="">У меня уже есть мой аккаунт</a>
+              <a href="/login">У меня уже есть мой аккаунт</a>
             </div>
           </div>
         </div>
