--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -4,50 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../static/assets/css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../static/favicon.ico"
+      type="image/x-icon"
+    />
+    <link href="../static/css/style.css" rel="stylesheet" />
     <link href="../static/css/main.css" rel="stylesheet" />
     <link href="../static/css/tailwind.css" rel="stylesheet" />
+    <link href="../static/css/toasts.css" rel="stylesheet" />
+
+    <script src="../static/js/toasts.js" type="text/javascript"></script>
     <script src="../static/js/lib.js"></script>
   </head>
-
   <body>
+    {% if access_token %}
     <script>
-      (async () => {
-        let accessToken = localStorage.getItem("access_token");
-        let refreshToken = localStorage.getItem("refresh_token");
-        if (accessToken && refreshToken) {
-          let isValid = await verifyJwtToken(accessToken);
+      const accessToken = "{{ access_token }}";
 
-          if (isValid) {
-            window.location.href = "/dashboard";
-          } else {
-            let { access_token, refresh_token } = await refreshJwtToken(
-              refreshToken
-            );
-
-            if (access_token && refresh_token) {
-              localStorage.setItem("access_token", access_token);
-              localStorage.setItem("refresh_token", refresh_token);
-              window.location.href = "/dashboard";
-            } else {
-              console.log(
-                "Недопустимый токен обновления. Оставайтесь на странице."
-              );
-            }
-          }
+      verifyJwtToken(accessToken).then((valid) => {
+        if (valid) {
+          window.localStorage.setItem("access_token", accessToken);
+          window.location.href = "/dashboard";
         }
-      })();
+      });
     </script>
+
+    {% endif %}
+
     <!-- LOGIN PAGE START HERE -->
     <section class="login-page">
       <div class="top-logo-part">
         <div class="container">
           <div class="main-logo">
             <a href="/">
-              <img
-                src="../static/assets/images/white-logo.svg"
-                alt="white-logo"
-              />
+              <img src="../static/images/white-logo.svg" alt="white-logo" />
             </a>
           </div>
         </div>
@@ -59,7 +50,7 @@
           </div>
           <div class="login-image">
             <img
-              src="../static/assets/images/login-image.png"
+              src="../static/images/login-image.png"
               alt=""
               class="img-responsive"
             />
@@ -82,7 +73,7 @@
                   <label for="">Пароль</label>
                   <input type="text" placeholder="......." id="password" />
                   <div class="pw-shown" id="eye">
-                    <img src="../static/assets/images/eye.svg" alt="" />
+                    <img src="../static/images/eye.svg" alt="" />
                   </div>
                 </div>
               </div>
@@ -104,133 +95,6 @@
     </section>
     <!-- LOGIN PAGE START HERE -->
 
-    <section id="toasts">
-      <div
-        id="toast-success"
-        class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-20"
-        role="alert"
-        style="display: none"
-      >
-        <div
-          class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200"
-        >
-          <svg
-            class="w-5 h-5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
-            />
-          </svg>
-          <span class="sr-only">Значок проверки</span>
-        </div>
-        <div class="ms-3 text-sm font-normal" id="toast-success-text">
-          Вход в систему выполнен успешно.
-        </div>
-        <button
-          type="button"
-          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
-          data-dismiss-target="#toast-success"
-          aria-label="Close"
-          onclick="closeToast('toast-success')"
-        >
-          <span class="sr-only">Закрывать</span>
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-        </button>
-      </div>
-      <div
-        id="toast-danger"
-        class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-20"
-        role="alert"
-        style="display: none"
-      >
-        <div
-          class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200"
-        >
-          <svg
-            class="w-5 h-5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
-            />
-          </svg>
-          <span class="sr-only">Значок ошибки</span>
-        </div>
-        <div class="ms-3 text-sm font-normal" id="toast-danger-text">
-          Неверное имя пользователя и пароль
-        </div>
-        <button
-          type="button"
-          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
-          data-dismiss-target="#toast-danger"
-          aria-label="Close"
-          onclick="closeToast('toast-danger')"
-        >
-          <span class="sr-only">Закрывать</span>
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-        </button>
-      </div>
-    </section>
-
-    <script>
-      function closeToast(id) {
-        document.getElementById(id).style.display = "none";
-      }
-
-      document.getElementById("check").addEventListener("click", () => {
-        if (document.getElementById("check").checked) {
-          document.getElementById("submit").disabled = false;
-        } else {
-          document.getElementById("submit").disabled = true;
-        }
-      });
-
-      document.getElementById("eye").addEventListener("click", () => {
-        let password = document.getElementById("password");
-        let eye = document.getElementById("eye");
-
-        if (password.type === "password") {
-          password.type = "text";
-        } else {
-          password.type = "password";
-        }
-      });
-    </script>
     <script src="../static/js/login.js"></script>
   </body>
 </html>
