--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -4,39 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-    <link rel="stylesheet" href="../static/assets/css/style.css" />
     <link
       rel="shortcut icon"
       href="../static/favicon.ico"
       type="image/x-icon"
     />
-    <script src="../static/js/lib.js"></script>
     <link href="../static/css/tailwind.css" rel="stylesheet" />
+    <link href="../static/css/toasts.css" rel="stylesheet" />
     <link href="../static/css/main.css" rel="stylesheet" />
+    <link href="../static/css/style.css" rel="stylesheet" />
+
+    <script src="../static/js/toasts.js" type="text/javascript"></script>
+    <script src="../static/js/lib.js"></script>
   </head>
 
   <body>
-    <script>
-      (async () => {
-        await authFlow(null, "/login");
-      })();
-    </script>
-
     <!-- PROFILE PAGE START HERE -->
     <section class="profile-page">
       <img
-        src="../static/assets/images/left-overlay.png"
+        src="../static/images/left-overlay.png"
         alt="overlay"
         class="left-overlay"
       />
       <img
-        src="../static/assets/images/right-overlay.png"
+        src="../static/images/right-overlay.png"
         alt="overlay"
         class="right-overlay"
       />
       <div class="container">
         <div class="factory-logo">
-          <img src="../static/assets/images/form-factory-logo.svg" alt="" />
+          <img src="../static/images/form-factory-logo.svg" alt="" />
         </div>
         <div class="profile-edit">
           <div class="add-photo-wrapper">
@@ -47,11 +44,19 @@
                 accept="image/*"
                 style="display: none"
               />
+              {% if user.profile_picture_url %}
               <img
-                src="../static/assets/images/profile.svg"
+                src="../static/uploads/{{ user.profile_picture_url }}"
                 alt="фотография профиля"
                 id="profile-pic"
               />
+              {% else %}
+              <img
+                src="../static/images/default-profile.png"
+                alt="фотография профиля"
+                id="profile-pic"
+              />
+              {% endif %}
             </div>
             <span>Добавьте фото</span>
           </div>
@@ -64,27 +69,52 @@
             <li>
               <h6>Имя</h6>
               <span>
-                <input type="text" name="name" id="name" />
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  value="{{ user.name }}"
+                />
               </span>
             </li>
             <li>
               <h6>Пол</h6>
               <div class="gender-switcher">
                 <p class="fieldset">
+                  {% if user.gender == "male" %}
                   <input
                     type="radio"
-                    name="duration-1"
+                    name="gender-male"
                     value="male"
                     id="male"
                     checked
                   />
-                  <label for="male">Мужской</label>
+                  {% else %}
                   <input
                     type="radio"
-                    name="duration-1"
+                    name="gender-male"
+                    value="male"
+                    id="male"
+                  />
+                  {% endif %}
+                  <label for="male">Мужской</label>
+
+                  {% if user.gender == "female" %}
+                  <input
+                    type="radio"
+                    name="gender-female"
+                    value="female"
+                    id="female"
+                    checked
+                  />
+                  {% else %}
+                  <input
+                    type="radio"
+                    name="gender-female"
                     value="female"
                     id="female"
                   />
+                  {% endif %}
                   <label for="female">Женский </label>
                   <span class="switch"></span>
                 </p>
@@ -92,22 +122,43 @@
             </li>
             <li>
               <h6>Рост</h6>
-              <span> <input type="text" name="height" id="height" /> см </span>
+              <span>
+                <input
+                  type="text"
+                  name="height"
+                  id="height"
+                  value="{{ user.height }}"
+                />
+                см
+              </span>
             </li>
             <li>
               <h6>Вес</h6>
-              <span> <input type="text" name="weight" id="weight" /> кг </span>
+              <span>
+                <input
+                  type="text"
+                  name="weight"
+                  id="weight"
+                  value="{{ user.weight }}"
+                />
+                кг
+              </span>
             </li>
             <li>
               <h6>Желаемый вес</h6>
               <span>
-                <input type="text" name="desired-weight" id="desired-weight" />
+                <input
+                  type="text"
+                  name="desired-weight"
+                  id="desired-weight"
+                  value="{{ user.desired_weight }}"
+                />
               </span>
             </li>
             <li>
               <h6>Сколько вам лет?</h6>
               <span>
-                <input type="text" name="age" id="age" />
+                <input type="text" name="age" id="age" value="{{ user.age }}" />
               </span>
             </li>
           </ul>
@@ -122,10 +173,7 @@
             >
               Начинающий
               <div class="arrow-wrap">
-                <img
-                  src="../static/assets/images/white-right-arrow.svg"
-                  alt=""
-                />
+                <img src="../static/images/white-right-arrow.svg" alt="" />
               </div>
             </button>
             <button
@@ -135,10 +183,7 @@
             >
               Опытный
               <div class="arrow-wrap">
-                <img
-                  src="../static/assets/images/white-right-arrow.svg"
-                  alt=""
-                />
+                <img src="../static/images/white-right-arrow.svg" alt="" />
               </div>
             </button>
             <button
@@ -148,10 +193,7 @@
             >
               Спортсмен
               <div class="arrow-wrap">
-                <img
-                  src="../static/assets/images/white-right-arrow.svg"
-                  alt=""
-                />
+                <img src="../static/images/white-right-arrow.svg" alt="" />
               </div>
             </button>
           </div>
@@ -161,179 +203,17 @@
         </div>
       </div>
     </section>
-    <!-- PROFILE PAGE END HERE -->
-
-    <section id="toasts">
-      <div
-        id="toast-success"
-        class="fixed top-[15%] right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-50"
-        role="alert"
-        style="display: none"
-      >
-        <div
-          class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200"
-        >
-          <svg
-            class="w-5 h-5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
-            />
-          </svg>
-          <span class="sr-only">Тревога</span>
-        </div>
-        <div class="ms-3 text-sm font-normal" id="toast-success-text"></div>
-        <button
-          type="button"
-          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
-          data-dismiss-target="#toast-success"
-          aria-label="Close"
-          onclick="closeToast('toast-success')"
-        >
-          <span class="sr-only">Закрывать</span>
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-        </button>
-      </div>
-      <div
-        id="toast-danger"
-        class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-50"
-        role="alert"
-        style="display: none"
-      >
-        <div
-          class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200"
-        >
-          <svg
-            class="w-5 h-5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
-            />
-          </svg>
-          <span class="sr-only">Тревога</span>
-        </div>
-        <div class="ms-3 text-sm font-normal" id="toast-danger-text"></div>
-        <button
-          type="button"
-          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
-          data-dismiss-target="#toast-danger"
-          aria-label="Close"
-          onclick="closeToast('toast-danger')"
-        >
-          <span class="sr-only">Закрывать</span>
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-        </button>
-      </div>
-    </section>
 
     <script>
-      (async () => {
-        let accessToken = localStorage.getItem("access_token");
-        let { res, data } = await getUser(accessToken);
-        if (res.status === 401) {
-          window.location.href = "/login";
-        }
+      var activityLevel = "{{ user.activity_level }}";
 
-        if (data.profile_picture_url === "") {
-          document
-            .getElementById("profile-pic")
-            .setAttribute(
-              "src",
-              "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcST8AtmjZZlbJfH2Xqps-lRFOQuTysOO4n7FTlNtyVuzA&s"
-            );
-        } else {
-          document
-            .getElementById("profile-pic")
-            .setAttribute(
-              "src",
-              `../../static/uploads/${data.profile_picture_url}`
-            );
-        }
-        document.getElementById("name").value = data.username ?? "";
-
-        let gender = data.gender ?? "";
-        gender = gender.toLowerCase();
-
-        if (gender === "male") {
-          document.getElementById("male").checked = true;
-        } else {
-          document.getElementById("female").checked = true;
-        }
-
-        document.getElementById("height").value = data.height;
-        document.getElementById("weight").value = data.weight;
-        document.getElementById("age").value = data.age;
-        document.getElementById("desired-weight").value = data.desired_weight;
-
-        let activityLevel = data.activity_level ?? 0;
-
-        if (activityLevel !== 0) {
-          document.getElementById(
-            `btn-activity-level-${activityLevel}`
-          ).style.backgroundColor = "#958be4";
-        }
-      })();
-
-      function closeToast(id) {
-        document.getElementById(id).style.display = "none";
+      if (activityLevel != "0") {
+        document.getElementById(
+          `btn-activity-level-${activityLevel}`
+        ).style.backgroundColor = "#958be4";
       }
     </script>
 
     <script src="../static/js/profile.js" defer></script>
-
-    <style>
-      /* Removes the increment and decrement arrow from the default input:number tag */
-      .remove-arrow::-webkit-inner-spin-button,
-      .remove-arrow::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-      }
-
-      .remove-arrow {
-        -moz-appearance: textfield;
-        appearance: textfield;
-      }
-
-      #profile-pic-container {
-        position: relative;
-        display: inline-block;
-      }
-    </style>
   </body>
 </html>
