--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -15,7 +15,7 @@
     <link href="../static/css/style.css" rel="stylesheet" />
 
     <script src="../static/js/toasts.js" type="text/javascript"></script>
-    <script src="../static/js/lib.js"></script>
+    <script src="../static/js/lib.js" type="text/javascript"></script>
   </head>
   <body>
     <section class="dashboard-page">
@@ -62,7 +62,7 @@
           </ul>
         </div>
 
-        <canvas id="workout-chart" class="p-1 mb-5 mb-m-150"></canvas>
+        <!-- <canvas id="workout-chart" class="p-1 mb-5 mb-m-150"></canvas> -->
 
         <div class="slogon-wraps">
           <span>Каждая тренировка – шаг к лучшей версии себя</span>
