--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -98,7 +98,7 @@
           <a href="/workouts/new">
             <button class="btn">Создать свою тренировку</button>
           </a>
-          <a href="/workouts">
+          <a href="">
             <button class="btn">Мои тренировки</button>
           </a>
         </div>
